PROJECT(RESEARCH_CHAI_SCRIPT)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# Use C++14.
ADD_DEFINITIONS("-std=c++14")

# CPP.
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/app)

# Chai.
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/../ChaiScript/include)

ADD_EXECUTABLE(cpp-callback-script main.cpp)

TARGET_LINK_LIBRARIES(cpp-callback-script dl pthread)

